crates/otter-vm/tests/compile_fail/local_is_not_send.stderr
error[E0277]: `*const HandleStack` cannot be sent between threads safely
 --> tests/compile_fail/local_is_not_send.rs:7:21
  |
7 |         assert_send(local);
  |         ----------- ^^^^^ `*const HandleStack` cannot be sent between threads safely
  |         |
  |         required by a bound introduced by this call
  |
  = help: within `Local<'_, ()>`, the trait `Send` is not implemented for `*const HandleStack`
note: required because it appears within the type `Local<'_, ()>`
 --> $WORKSPACE/crates/otter-gc/src/handle.rs
  |
  | pub struct Local<'gc, T: ?Sized> {
  |            ^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/local_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>(_t: T) {}
  |                   ^^^^ required by this bound in `assert_send`
